--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "nodemon": "^1.11.0",
+    "pdf-text-extract": "^1.5.0",
     "pug": "^2.0.0-beta11",
     "serve-favicon": "~2.3.0"
   }
