--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
     "pug": "^2.0.0-beta11",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "hummus": "~1.0.79"
   }
 }
