try to send attachment

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "pug": "^2.0.0-beta11",
     "serve-favicon": "~2.3.0",
     "hummus": "~1.0.79",
-    "mysql": "^2.5.4"
+    "mysql": "^2.5.4",
+    "nodemailer":"^4.4.1",
+    "nodemailer-smtp-transport":"^2.7.4"
   }
 }
